<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:stretchColumns="0"
             android:padding="10dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/preferenceRefreshRate_caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/preferenceRefreshRate"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/preference_refreshRate_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/preferenceLatitude_caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/preferenceLatitude"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/preferenceLatitude_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="numberDecimal"/>

        <Spinner
            android:id="@+id/preferenceLatitude_direction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:entries="@array/latitudeDirections"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/preferenceLongitude_caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/preferenceLongitude"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/preferenceLongitude_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="numberDecimal"/>

        <Spinner
            android:id="@+id/preferenceLongitude_direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:entries="@array/longitudeDirections"
            android:visibility="visible"/>

    </TableRow>

</TableLayout>