<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             tools:context="com.example.jacek.astroweather.WeatherFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/textView_moonTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/moonFragmentTitle"
            android:textAlignment="gravity"
            android:textColor="@color/moonDark"
            android:textSize="@dimen/titleTextSize"
            android:textStyle="bold"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/img_moonrise"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/moonriseTitle"
            android:padding="10dp"
            app:srcCompat="@drawable/moonrise"
            android:adjustViewBounds="false"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/moonrise_caption"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.25"
                android:gravity="bottom"
                android:padding="10dp"
                android:textSize="@dimen/defaultTextSize"
                android:text="@string/moonriseTitle"
                android:textAlignment="center"
                android:textColor="@color/moonSilver"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/moonrise_value"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.75"
                android:padding="10dp"
                android:textSize="@dimen/defaultTextSize"
                android:text=""
                android:textAlignment="center"
                tools:text="16:38"/>
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/img_moonset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/moonsetTitle"
            android:padding="10dp"
            app:srcCompat="@drawable/moonset"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/moonset_caption"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:padding="10dp"
                android:textSize="@dimen/defaultTextSize"
                android:text="@string/moonsetTitle"
                android:textAlignment="center"
                android:textColor="@color/moonSilver"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/moonset_value"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:textSize="@dimen/defaultTextSize"
                android:text=""
                android:textAlignment="center"
                tools:text="12:38"/>
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85">

        <ImageView
            android:id="@+id/img_moon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/moonFragmentTitle"
            android:padding="10dp"
            app:srcCompat="@drawable/moon"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/moonPhase_caption"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/moonPhaseTitle"
                android:textSize="@dimen/defaultTextSize"
                android:textAlignment="center"
                android:textColor="@color/moonSilver"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/moonPhase_value"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:textSize="@dimen/defaultTextSize"
                android:text=""
                android:textAlignment="center"
                tools:text="65%"/>

            <TextView
                android:id="@+id/moonAge_caption"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/moonAgeTitle"
                android:textSize="@dimen/defaultTextSize"
                android:textAlignment="center"
                android:textColor="@color/moonSilver"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/moonAge_value"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:textSize="@dimen/defaultTextSize"
                android:text=""
                android:textAlignment="center"
                tools:text="26 days"/>
        </LinearLayout>

    </TableRow>

</TableLayout>